Added some basic error rendering

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     // Description of the quiz
     description: 'The LPIC-1 certification (Linux Administrator) of the Linux Professional Institute requires passing the exams 101 and 102. This Quiz contains 20 questions focused on the 101 Exam topics, which you have to answer in 30 Minutes.',
     // (Maximum) Number of Questions
-    questionCount: 20,
+    questionCount: 5,
     // Duration in minutes
     duration: 30,
     // Randomize the quiz and questions (if the pool is larger)
@@ -25,7 +25,7 @@
     // URL where reports should be posted to (see swagger)
     reportEndpoint: '/report.php',
     // Statistic endpoint (Sends the quiz result to the endpoint in order to be able to track question difficulty - see swagger)
-    statisticEndpoint: '/stats.php',
+    statisticEndpoint: '',
   };
   </script>
 </head>
