--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <title>Bytee.net Quiz</title>
+  <title>Bytee.net Vue.js Quiz</title>
   <script>
   // Sample Quiz with LPIC-1 Exam 101 Questions bundled
   window.Quiz = {
