--- a/public/index.html
+++ b/public/index.html
@@ -31,8 +31,9 @@
 </head>
 <body>
 <noscript>
-  <strong>We're sorry but the Quiz doesn't work properly without JavaScript enabled. Please enable
-    it to continue.</strong>
+  <strong>
+    We're sorry but the Quiz doesn't work properly without JavaScript enabled. Please enable it to continue.
+  </strong>
 </noscript>
 <div id="app"></div>
 </body>
